--- a/.gitignore
+++ b/.gitignore
@@ -12,3 +12,10 @@ obj/Debug/ParseHub.Client.pdb
 obj/Debug/TemporaryGeneratedFile_036C0B5B-1481-4323-8D20-8F5ADCB23D92.cs
 obj/Debug/TemporaryGeneratedFile_5937a670-0e60-4077-877b-f7221da3dda1.cs
 obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+obj/Debug/ParseHub.Client.csproj.CopyComplete
+.vs/ParseHub.Client/v15/Server/sqlite3/storage.ide-wal
+.vs/ParseHub.Client/v15/.suo
+obj/Debug/ParseHub.Client.csproj.CoreCompileInputs.cache
+.vs/ParseHub.Client/v15/Server/sqlite3/db.lock
+.vs/ParseHub.Client/v15/Server/sqlite3/storage.ide
+.vs/ParseHub.Client/v15/Server/sqlite3/storage.ide-shm
